<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="login_label">Login</string>
    <string name="sign_in_to_continue">Please sign in to continue</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="confirm_edit_text">Confirm password</string>
    <string name="signup_label">Sign up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="already_account">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sign_up_ok">Sign up OK</string>
    <string name="login_ok">Login OK</string>
    <string name="logout_ok">Logout OK</string>
    <string name="create_account">Create account</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="logout">Logout</string>
    <string name="note_added">Note added</string>
    <string name="note_updated">Note updated</string>
    <string name="note_deleted">Note deleted</string>
    <string name="read_error">Failed to fetch notes</string>
    <string name="write_error">Failed to add note</string>
    <string name="update_error">Failed to update note</string>
    <string name="delete_error">Failed to delete note</string>
    <string name="signup_error">Failed to sign up</string>
    <string name="login_error">Failed to login</string>
    <string name="logout_error">Failed to logout</string>
</resources>